force-app/main/default/objects/pdffiller_sfree__UserConfig__c/pdffiller_sfree__UserConfig__c.object-meta.xml
<CustomObject>
    <label>User Configuration</label>
    <nameField>
        <label>User Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>