force-app/main/default/objects/pdffiller_sfree__UserConfig__c/fields/pdffiller_sfree__IsAdmin__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__IsAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAdmin</label>
    <type>Checkbox</type>
</CustomField>