force-app/main/default/objects/pdffiller_sfree__UserConfig__c/fields/pdffiller_sfree__RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__RefreshToken__c</fullName>
    <label>RefreshToken</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>