force-app/main/default/objects/pdffiller_sfree__UserConfig__c/listViews/allSelection_UserConfig.listView-meta.xml
<ListView>
    <fullName>allSelection_UserConfig</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>